@@ -32,6 +32,8 @@ import com.siemens.sw360.datahandler.thrift.components.ComponentService;
 import com.siemens.sw360.datahandler.thrift.components.Release;
 import com.siemens.sw360.datahandler.thrift.components.ReleaseLink;
 import com.siemens.sw360.datahandler.thrift.licenses.License;
+import com.siemens.sw360.datahandler.thrift.licenses.LicenseService;
+import com.siemens.sw360.datahandler.thrift.licenses.Obligation;
 import com.siemens.sw360.datahandler.thrift.moderation.ModerationRequest;
 import com.siemens.sw360.datahandler.thrift.moderation.ModerationService;
 import com.siemens.sw360.datahandler.thrift.projects.Project;
@@ -49,6 +51,7 @@ import org.jetbrains.annotations.NotNull;
 import javax.portlet.*;
 import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static com.siemens.sw360.datahandler.common.CommonUtils.nullToEmptySet;
 import static com.siemens.sw360.portal.common.PortalConstants.*;
@@ -97,15 +100,17 @@ public class ModerationPortlet extends FossologyAwarePortlet {
                 } else if (ACTION_DECLINE.equals(request.getParameter(ACTION))) {
                     client.refuseRequest(id);
 
-                    sessionMessage = "You have decline the previous moderation request";
+                    sessionMessage = "You have declined the previous moderation request";
                 } else if (ACTION_ACCEPT.equals(request.getParameter(ACTION))) {
-                    acceptModerationRequest(user, moderationRequest);
+                    String requestingUserEmail = moderationRequest.getRequestingUser();
+                    User requestingUser = UserCacheHolder.getUserFromEmail(requestingUserEmail);
+                    acceptModerationRequest(user, requestingUser, moderationRequest);
 
                     moderationRequest.setModerationState(ModerationState.APPROVED);
                     moderationRequest.setReviewer(user.getEmail());
                     client.updateModerationRequest(moderationRequest);
 
-                    sessionMessage = "You have postponed the previous moderation request.";
+                    sessionMessage = "You have accepted the previous moderation request.";
                 } else if (ACTION_POSTPONE.equals(request.getParameter(ACTION))) {
                     // keep me assigned but do it later... so nothing to be done here
                     sessionMessage = "You have postponed the previous moderation request.";
@@ -125,7 +130,7 @@ public class ModerationPortlet extends FossologyAwarePortlet {
         }
     }
 
-    private void acceptModerationRequest(User user, ModerationRequest moderationRequest) throws TException {
+    private void acceptModerationRequest(User user, User requestingUser, ModerationRequest moderationRequest) throws TException {
         switch (moderationRequest.getDocumentType()) {
             case COMPONENT: {
                 ComponentService.Iface componentClient = thriftClients.makeComponentClient();
@@ -154,6 +159,10 @@ public class ModerationPortlet extends FossologyAwarePortlet {
                 }
             }
             break;
+            case LICENSE: {
+                LicenseService.Iface licenseClient = thriftClients.makeLicenseClient();
+                    licenseClient.updateLicense(moderationRequest.getLicense(), user, requestingUser);
+            }
         }
     }
 
@@ -165,31 +174,26 @@ public class ModerationPortlet extends FossologyAwarePortlet {
         }
 
         List<ModerationRequest> requestsByModerator = client.getRequestsByModerator(user);
-        ImmutableList<ModerationRequest> openModerationRequests = FluentIterable.from(requestsByModerator).filter(new Predicate<ModerationRequest>() {
-            @Override
-            public boolean apply(ModerationRequest input) {
-                return ModerationState.PENDING.equals(input.getModerationState());
-            }
-        }).toList();
+        List<ModerationRequest> openModerationRequests = requestsByModerator
+                .stream()
+                .filter(input-> ModerationState.PENDING.equals(input.getModerationState()))
+                .collect(Collectors.toList());
+
         Collections.sort(openModerationRequests, compareByTimeStamp());
 
         int nextIndex = openModerationRequests.indexOf(moderationRequest) + 1;
         if (nextIndex < openModerationRequests.size()) {
-            sessionMessage += " You have assigned yourself to this moderation request.";
-            SessionMessages.add(request, "request_processed", sessionMessage);
             renderEditViewForId(request, response, openModerationRequests.get(nextIndex).getId());
         } else {
-            FluentIterable<ModerationRequest> requestsInProgressAndAssignedToMe = FluentIterable.from(requestsByModerator).filter(new Predicate<ModerationRequest>() {
-                @Override
-                public boolean apply(ModerationRequest input) {
-                    return ModerationState.INPROGRESS.equals(input.getModerationState()) && user.getEmail().equals(input.getReviewer());
-                }
-            });
+            List<ModerationRequest> requestsInProgressAndAssignedToMe = requestsByModerator
+                    .stream()
+                    .filter(input-> ModerationState.INPROGRESS.equals(input.getModerationState()) && user.getEmail().equals(input.getReviewer()))
+                    .collect(Collectors.toList());
 
-            if (requestsInProgressAndAssignedToMe.first().isPresent()) {
+            if (requestsInProgressAndAssignedToMe.size()>0) {
                 sessionMessage += " You have returned to your first open request.";
                 SessionMessages.add(request, "request_processed", sessionMessage);
-                renderEditViewForId(request, response, Collections.min(requestsInProgressAndAssignedToMe.toList(), compareByTimeStamp()).getId());
+                renderEditViewForId(request, response, Collections.min(requestsInProgressAndAssignedToMe, compareByTimeStamp()).getId());
             } else {
                 sessionMessage += " You have no open Requests.";
                 SessionMessages.add(request, "request_processed", sessionMessage);
@@ -232,8 +236,6 @@ public class ModerationPortlet extends FossologyAwarePortlet {
 
     public void renderEditView(RenderRequest request, RenderResponse response) throws IOException, PortletException {
         String id = request.getParameter(MODERATION_ID);
-        SessionMessages.add(request, "request_processed", "You have assigned yourself to this moderation request.");
-
         try {
             renderEditViewForId(request, response, id);
         } catch (TException e) {
@@ -249,7 +251,10 @@ public class ModerationPortlet extends FossologyAwarePortlet {
 
                 ModerationService.Iface client = thriftClients.makeModerationClient();
                 moderationRequest = client.getModerationRequestById(id);
-                client.setInProgress(id, user);
+                if(moderationRequest.getModerationState().equals(ModerationState.PENDING) || moderationRequest.getModerationState().equals(ModerationState.INPROGRESS)) {
+                    SessionMessages.add(request, "request_processed", "You have assigned yourself to this moderation request.");
+                    client.setInProgress(id, user);
+                }
                 request.setAttribute(MODERATION_REQUEST, moderationRequest);
                 addModerationBreadcrumb(request, response, moderationRequest);
 
@@ -267,6 +272,9 @@ public class ModerationPortlet extends FossologyAwarePortlet {
                         break;
                     case PROJECT:
                         renderProjectModeration(request, response, moderationRequest, user);
+                        break;
+                    case LICENSE:
+                        renderLicenseModeration(request, response, moderationRequest, user);
                         break;
                 }
                 request.setAttribute(PortalConstants.MODERATION_REQUEST, moderationRequest);
@@ -290,7 +298,7 @@ public class ModerationPortlet extends FossologyAwarePortlet {
         }
 
         if (actual_component == null) {
-            renderNextModeration(request, response, user, "Ingored unretrievable target", thriftClients.makeModerationClient(), moderationRequest);
+            renderNextModeration(request, response, user, "Ignored unretrievable target", thriftClients.makeModerationClient(), moderationRequest);
             return;
         }
 
@@ -345,7 +353,7 @@ public class ModerationPortlet extends FossologyAwarePortlet {
         }
 
         if (actual_release == null) {
-            renderNextModeration(request, response, user, "Ingored unretrievable target", thriftClients.makeModerationClient(), moderationRequest);
+            renderNextModeration(request, response, user, "Ignored unretrievable target", thriftClients.makeModerationClient(), moderationRequest);
             return;
         }
 
@@ -365,7 +373,7 @@ public class ModerationPortlet extends FossologyAwarePortlet {
         if (requestDocumentDelete && is_used) {
             ModerationService.Iface client = thriftClients.makeModerationClient();
             client.refuseRequest(moderationRequest.getId());
-            renderNextModeration(request, response, user, "Ingored delete of used target", client, moderationRequest);
+            renderNextModeration(request, response, user, "Ignored delete of used target", client, moderationRequest);
             return true;
         }
         return false;
@@ -412,7 +420,7 @@ public class ModerationPortlet extends FossologyAwarePortlet {
         }
 
         if (actual_project == null) {
-            renderNextModeration(request, response, user, "Ingored unretrievable target", thriftClients.makeModerationClient(), moderationRequest);
+            renderNextModeration(request, response, user, "Ignored unretrievable target", thriftClients.makeModerationClient(), moderationRequest);
             return;
         }
 
@@ -444,6 +452,29 @@ public class ModerationPortlet extends FossologyAwarePortlet {
             log.error("Error fetching project from backend!", e);
         }
     }
+
+    public void renderLicenseModeration(RenderRequest request, RenderResponse response, ModerationRequest moderationRequest, User user) throws IOException, PortletException, TException {
+        License actual_license = null;
+        User requestingUser = UserCacheHolder.getUserFromEmail(moderationRequest.getRequestingUser());
+        try {
+            LicenseService.Iface client = thriftClients.makeLicenseClient();
+            actual_license = client.getByID(moderationRequest.getDocumentId(),requestingUser.getDepartment());
+            request.setAttribute(PortalConstants.ACTUAL_LICENSE, actual_license);
+            List<Obligation> obligations = client.getAllObligations();
+            request.setAttribute(KEY_OBLIGATION_LIST, obligations);
+            request.setAttribute(KEY_LICENSE_DETAIL, actual_license);
+        } catch (TException e) {
+            log.error("Could not retrieve license", e);
+        }
+
+        if (actual_license == null) {
+            renderNextModeration(request, response, user, "Ignored unretrievable target", thriftClients.makeModerationClient(), moderationRequest);
+            return;
+        }
+
+        include("/html/moderation/licenses/merge.jsp", request, response);
+    }
+
 
     private Map<Integer, Collection<ReleaseLink>> getLinkedReleases(Map<String, String> releaseIdToUsage) {
         return SW360Utils.getLinkedReleases(releaseIdToUsage, thriftClients, log);
